--- a/migame/estilo.css
+++ b/migame/estilo.css
@@ -11,6 +11,10 @@
 body{
     overflow: hidden;
     background:url(./img/65a7f20bfa462728e03e5de3df7f88cf.jpg);
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
 }
 
 #boton{
@@ -24,7 +28,7 @@ body{
     text-transform: uppercase;
     text-decoration: transparent;
     background-color: transparent;
-    
+    background-attachment: fixed;
 }
 
 #audio{
@@ -41,7 +45,7 @@ body{
     margin-block-start: 0,83px;
     margin-block-end: 0,83px;
     color: white;
-    
+    background-attachment: fixed;
 }
 
 #tamaño{
@@ -60,6 +64,7 @@ body{
     color: white;
     width: 30px;
     font-size: 0.5rem;
+    background-attachment: fixed;
 }
 
 
