--- a/migame/styles.css
+++ b/migame/styles.css
@@ -1,5 +1,9 @@
 #fondo{
-    background: url(./img/Gotham_City-Urban_Landscape_Wallpaper_1920x1080.jpg)
+    background: url(./img/Gotham_City-Urban_Landscape_Wallpaper_1920x1080.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    box-sizing: border-box;
+    background-attachment: fixed;
 }
 
 #titulo{
@@ -13,11 +17,13 @@
 
 #canvas{
   background:url(./img/fondo.gif);
+  background-repeat: no-repeat;
+  background-size: 110%;
   margin: 40px;
+  background-attachment: fixed;
 }
 
 #boton{
-
   margin: -40px 980px;
   align-items: left;
 }
